themes/hugobricks/static/css/base.css
/* ... */
p img, p img:last-child {border-radius: 1rem; overflow: hidden; margin-block: 2.25rem;}
pre {
    overflow: auto; 
    background: var(--light); 
    padding: 0.75rem 1rem; 
    border: 0.1rem solid var(--light); 
    border-radius: 0.25rem; 
    font-size: 0.95rem;
    white-space: pre-wrap; 
}
blockquote {font-style: italic; border-left: 0.25rem solid var(--borderMedium); padding-left: 1.25rem;}
video, audio {width: 100%;}
.sr-only {display: none!important;}
:not(pre) > code {
    background: var(--light);
    padding: 0.15rem 0.3rem;
    border: 0.1rem solid var(--light);
    border-radius: 0.25rem;
}

/*------------------------*/
/* fonts
/*------------------------*/

.container.post h2, section.docs h2,
body, input, textarea, select, a.logo > div.has_subtitle > div span:nth-child(2) {font-family: var(--fontBody);}
h1, h2, a.logo {font-family: var(--fontTitles);}

/*------------------------*/
/* logo
/*------------------------*/

a.logo {font-size: 1.8rem; font-weight: bold; text-decoration: none; color: var(--textDark);}
a.logo img {height: 3rem;}
a.logo img.inline {height: 2rem;}
a.logo > div {display: flex; gap: 0.8rem; align-items: center;}
a.logo > div > div span {display: block;}
a.logo > div.has_subtitle {gap: 1rem;}
a.logo > div.has_subtitle > div span:nth-child(1) {line-height: 1.2;}
a.logo > div.has_subtitle > div span:nth-child(2) {font-size: 0.75rem; font-weight: normal;}

/*------------------------*/
/* sections general
/*------------------------*/

section {color: var(--textMedium);}
section, section.image.alt {padding: 4.5rem 0 5rem;}
section .twocols {display: grid; grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr)); grid-gap: 5.5rem clamp(2rem, 5vw, 5rem);}
section .twocols > div {display: flex; flex-direction: column; justify-content: center;}
section .container.small {max-width: 40rem;}
section .container.medium { max-width: 60rem;}
section.hasbackgroundcolor {padding: 0; margin-top: 2rem;}
section.hasbackgroundcolor + section.hasbackgroundcolor {padding-top: 3.5rem;}
section.bgimage.hasbackgroundcolor + section:not(.hasbackgroundcolor) {margin-top: 1.5rem;}
section :last-child {margin-bottom: 0;}
section:not(.hasbackgroundcolor) + section:not(.hasbackgroundcolor) {padding-top: 2rem;}
section.hasbackgroundcolor + footer {margin-top: 7.5rem;}
section.stickstofooter + footer {margin-top: 0; border-top: 0;}

/*------------------------*/
/* box
/*------------------------*/

.box {background: var(--light); border: 0.1rem solid var(--borderLight); padding: 3.5rem clamp(2rem, 5vw, 5rem); border-radius: 1rem; position: relative;}
.box:not(:last-child) {margin-bottom: 1.7em;}
.box p img {border-radius: 0;}

/*------------------------*/
/* map
/*------------------------*/

.map:not(section) {aspect-ratio: 2.25; width: 100%; border-radius: 1rem;}
.map:not(section) {position: relative; background-position: center calc(50% + 2rem); background-repeat: repeat;}
.map:not(section)::after {
    content: ""; 
    width: 100%; 
    height: 100%; 
    background: url(/img/marker.svg) center center / auto 4rem no-repeat; 
    left: 0; 
    top: 0;
    position: absolute;
    display: block;
}

/*------------------------*/
/* image
/*------------------------*/

figure {border-radius: 1rem; overflow: hidden;}
div:not(.box) > div.image img {border-radius: 0;}
@media (max-width: 600px) {
    div:not(.box) > div.image {padding: 0;}
    div:not(.box) > div.image img {max-width: 100%;}
}

/*------------------------*/
/* forms
/*------------------------*/

form > div {display: flex; flex-direction: column; gap: 0.25rem; margin-bottom: 1rem;}
form > div.radio + div.radio {margin-top: -1rem;}
input, textarea, select {
    font-size: 1rem;
    padding: 0.5em 0.5em;
    border: 1px solid var(--borderMedium);
    color: var(--textDark);
    border-radius: 0.25rem;
}
textarea {resize: vertical; height: 9rem;}
input[type="checkbox"], input[type="radio"] {margin-right: 0.5rem; cursor: pointer;} 
form > div.submit {padding-top: 0.55rem;}
form h3 {padding-top: 0; padding-bottom: 1rem;}
label.inborder {
    position: absolute; 
    background: white; 
    font-size: 0.85rem; 
    line-height: 1;
    padding: 0 0.25rem;
    margin-left: 0.6rem;
    display: inline-block;
    z-index: 2;
}
label.inborder + * {margin-top: 0.5rem;}
div.box label.inborder::after {
    background: linear-gradient(var(--light) 50%, white 50%);
    width: 100%;
    height: 100%;
    left: 0;
    top: 0;
    content: "";
    position: absolute;
    z-index: -1;
}

/*------------------------*/
/* buttons
/*------------------------*/

.button, button {
    background: var(--accent); 
    color: white;
    text-decoration: none;
    padding: 0.7em 1.25em;
    font-weight: bold;
    display: inline-block;
    font-size: 1rem;
    border-radius: 0.4rem;
    border: 0;
    cursor: pointer;
    letter-spacing: 0.02em;
    transition: transform 0.075s ease-in-out;
    white-space: nowrap;
}
@media (min-width: 600px) {
.button:hover, button:hover {transform: scale(1.035);}
}
.button.secondary {background: var(--textDark);}
.button.secondary.ghost {background: transparent; color: var(--textDark); box-shadow: inset 0 0 0 0.1rem var(--textDark);}
.button.icon {
    padding: 0; 
    position: relative; 
    display: flex; 
    justify-content: center; 
    align-items: center;
    aspect-ratio: 1;
    width: 2.25rem;
}
.button.icon img {
    width: calc(100% - 1.25em); 
    height: calc(100% - 1.25em);
    filter: invert(1);
}
.button.ghost {background: transparent; color: var(--accentDarker); box-shadow: inset 0 0 0 0.1rem var(--accent);}
.button.smaller {padding: 0.4rem 1rem;}
p > .button {margin: 0.5rem 0;}
ul.buttons {gap: 1rem; margin-left: 0; display: flex; padding: 0.5rem 0;}
ul.buttons li {list-style: none;}
ul.buttons.social .button {background: var(--textDark);}
/* ... */

